Move compactor json files out of generated and into resources so they don't get deleted by runData. Fix AbstractInventoryBlockEntity not having a load tag method. For some reason runData changed the line separator value, so need to add them.